second_server/server.yaml
apiVersion: v1
kind: Service
metadata:
  name: server2
  labels:
    app: server2
    service: server2
spec:
  ports:
  - port: 8080
    name: http
  selector:
    app: server2
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: server2-v1
  labels:
    app: server2
    version: v1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: server2
      version: v1
  template:
    metadata:
      annotations:
        prometheus.io/scrape: "true"
        prometheus.io/port: "8080"
        prometheus.io/path: "/metrics"
      labels:
        app: server2
        version: v1
    spec:
      serviceAccountName: listen-server2
      containers:
      - name: server2
        image: docker.io/mizmorr/server:v2
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 8080
        volumeMounts:
        - name: tmp
          mountPath: /tmp
      volumes:
      - name: tmp
        emptyDir: {}
---
